--- a/src/components/shop/ShopExperience.css
+++ b/src/components/shop/ShopExperience.css
@@ -18,9 +18,5 @@
 }
 
 .shop-experience__catalog {
-  background: #0a0908;
-}
-
-.shop-experience__rays--catalog {
-  opacity: 0.92;
+  background: #000000;
 }
